circlemap with 1 expression ring works

--- a/test17.html
+++ b/test17.html
@@ -14,6 +14,7 @@
 
 		<script src="scripts/d3.v3.js"></script>
 		<script src="scripts/static.js"></script>
+		<script src="scripts/jstat.min.js"></script>
 		<script src="scripts/OD_eventData.js"></script>
 		<script src="scripts/graphData.js"></script>
 		<script src="scripts/medbook_data_load.js"></script>
