test18 for working on converting to meteor plugin

--- a/index.html
+++ b/index.html
@@ -227,6 +227,12 @@
 				<a href='test17.html?test=true&circles=false' target='_test'>test17.html?test=true&circles=false</a>
 			</dt>
 			<dd>
+				able to display one expression ring using data from OD_eventData.js
+			</dd>
+			<dt>
+				<a href='test18.html?test=true&circles=true' target='_test'>test18.html?test=true&circles=false</a>
+			</dt>
+			<dd>
 				(converting to meteor plugin)
 			</dd>
 		</dl>
