--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 				able to display one expression ring using data from OD_eventData.js
 			</dd>
 			<dt>
-				<a href='test18.html?test=true&circles=true' target='_test'>test18.html?test=true&circles=false</a>
+				<a href='test18.html?test=true&circles=true' target='_test'>test18.html?test=true&circles=true</a>
 			</dt>
 			<dd>
 				(converting to meteor plugin)
