remove code that directly depended on d3 to load data

--- a/test18.html
+++ b/test18.html
@@ -54,6 +54,7 @@
             };
 
             cmg2 = new circleMapGenerator_2(eventAlbum, queryData);
+            query = queryData;
 
             // pathway
             graphDataURL = "data/random_sif.tab";
