--- a/test18.html
+++ b/test18.html
@@ -39,29 +39,37 @@
             expressionData = bbb;
 
             eventAlbum = new eventData.OD_eventAlbum();
-            medbookDataLoader.mongoExpressionData(expressionData, eventAlbum);
-            medbookDataLoader.mongoClinicalData(clinicalData, eventAlbum);
+            medbookDataLoader.getExpressionData('data/expression.tab', eventAlbum);
+            medbookDataLoader.getClinicalData('data/subtype.tab', eventAlbum);
 
+            console.log('eventAlbum', eventAlbum);
+
+            // pathway
+            graphDataURL = "data/ar.sif";
+            graph = new graphData();
+            graph.readSif(utils.getResponse(graphDataURL));
+
+            console.log('graph', graph);
+
+            // medbookDataLoader.mongoClinicalData(clinicalData, eventAlbum);
+            //
             // circlemap settings
             queryData = {
-                "sampleGroupSummarySwitch" : false,
-                "ignoreMissingSamples" : false,
-                "features" : ["PEG10_mRNA", "PFKFB4_mRNA", "PPARG_mRNA", "PRR5_mRNA", "REEP6_mRNA", "RUNX1T1_mRNA", "SELL_mRNA", "SERTAD1_mRNA", "SLC30A4_mRNA", "SPINK1_mRNA", "ST8SIA4_mRNA", "TEAD2_mRNA", "TMPRSS2_mRNA"],
-                "ringsList" : ["expression data"],
-                "orderFeature" : "PEG10",
+                // "sampleGroupSummarySwitch" : false,
+                // "ignoreMissingSamples" : false,
+                // "features" : ["PEG10_mRNA", "PFKFB4_mRNA", "PPARG_mRNA", "PRR5_mRNA", "REEP6_mRNA", "RUNX1T1_mRNA", "SELL_mRNA", "SERTAD1_mRNA", "SLC30A4_mRNA", "SPINK1_mRNA", "ST8SIA4_mRNA", "TEAD2_mRNA", "TMPRSS2_mRNA"],
+                "features" : ['ABTB2_mRNA', 'APOBEC3F_mRNA', 'APP_mRNA', 'AR_mRNA', 'DZIP1_mRNA', 'EPAS1_mRNA', 'ERG_mRNA', 'ESR2_mRNA', 'FGD1_mRNA', 'FKBP9_mRNA', 'IL6_mRNA', 'MYOM2_mRNA', 'NCOA1_mRNA', 'P2RY10_mRNA', 'PPP2R5C_mRNA', 'PTGER3_mRNA', 'SLC16A1_mRNA', 'ST5_mRNA', 'TBC1D16_mRNA', 'TBX21_mRNA', 'TGFB1_mRNA', 'TGFB2_mRNA', 'UGDH_mRNA', 'USP20_mRNA', 'VEGFA_mRNA', 'ZFPM2_mRNA'],
+                "ringsList" : ["core_subtype", "expression data"],
+                "orderFeature" : ['core_subtype', "AR_mRNA"],
                 "sortingRing" : "expression data",
-                "ringMergeSwitch" : false
+                // "ringMergeSwitch" : false
             };
 
             cmg = cmg2 = new circleMapGenerator_2(eventAlbum, queryData);
             query = queryData;
 
-            // pathway
-            graphDataURL = "data/random_sif.tab";
-            graph = new graphData();
-            graph.readSif(utils.getResponse(graphDataURL));
-
             circleDataLoaded = (utils.getQueryStringParameterByName('circles').toLowerCase() === 'true') ? true : false;
+            // circleDataLoaded = false;
 
 		</script>
 		<script src="scripts/main18.js"></script>
