stop using packed-in data

--- a/test18.html
+++ b/test18.html
@@ -19,8 +19,8 @@
 		<script src="scripts/graphData.js"></script>
 		<script src="scripts/medbook_data_load.js"></script>
 		<script src="scripts/circleMapGenerator.js"></script>
-		<script src='data/clinicalData.js'></script>
-		<script src='data/expressionData.js'></script>
+		<!-- <script src='data/clinicalData.js'></script>
+		<script src='data/expressionData.js'></script> -->
 		<noscript>
 			<div align="center">
 				<p style="color:black;background-color:red;font-size:18pt">
@@ -35,8 +35,8 @@
 		</div>
 		<script>
             // hard coded data
-            clinicalData = aaa;
-            expressionData = bbb;
+            // clinicalData = aaa;
+            // expressionData = bbb;
 
             eventAlbum = new eventData.OD_eventAlbum();
             medbookDataLoader.getExpressionData('data/expression.tab', eventAlbum);
