test19 for using cytoscapejs

--- a/index.html
+++ b/index.html
@@ -233,7 +233,13 @@
 				<a href='test18.html?test=true&circles=true' target='_test'>test18.html?test=true&circles=true</a>
 			</dt>
 			<dd>
-				(converting to meteor plugin)
+				categorical rings and multiple rings
+			</dd>
+			<dt>
+				<a href='test19.html?test=true&circles=true' target='_test'>test19.html?test=true&circles=true</a>
+			</dt>
+			<dd>
+				(use cytoscapejs)
 			</dd>
 		</dl>
 
