--- a/network.html
+++ b/network.html
@@ -4,10 +4,7 @@
 		<!-- <link href="style.css" rel="stylesheet" /> -->
 		<meta charset=utf-8 />
 		<title>Cytoscape.js initialisation</title>
-		<!-- <script src="jquery/jquery-1.6.1.min.js"></script>
-		<script src="cytoscape.js-2.3.8/build/cytoscape.min.js"></script> -->
 
-		<!-- <script src="bower_components/jquery/dist/jquery.min.js"></script> -->
 		<script src="bower_components/cytoscape/dist/cytoscape.min.js"></script>
 		<script src="bower_components/jstat/dist/jstat.min.js"></script>
 		<script src="bower_components/d3/d3.min.js"></script>
@@ -23,6 +20,12 @@
 	<body>
 		<div id='cytoDiv' style='height: 80%; width: 80%; position: absolute; left: 0; top: 0;'></div>
 		<script>
+            // circle data
+            eventAlbum = new eventData.OD_eventAlbum();
+            medbookDataLoader.getExpressionData('data/expression.tab', eventAlbum);
+            medbookDataLoader.getClinicalData('data/subtype.tab', eventAlbum);
+            medbookDataLoader.getViperData('data/viper.tab', eventAlbum);
+
             // pathway
             graphDataURL = "data/vlado.sif";
             graph = new graphData.graphData();
@@ -30,7 +33,7 @@
 
             divElem = document.getElementById('cytoDiv');
 
-            cytoCircle.buildCytoGraph(divElem, graph.toCytoscapeElements(), null, null);
+            cyto = cytoCircle.buildCytoGraph(divElem, graph.toCytoscapeElements());
 		</script>
 	</body>
 </html>
