--- a/cytojs.html
+++ b/cytojs.html
@@ -53,7 +53,7 @@
                 // "ringMergeSwitch" : false
             };
 
-            cmg = new circleMapGenerator(eventAlbum, queryData);
+            cmg = new circleMapGenerator.circleMapGenerator(eventAlbum, queryData);
 
             // generate and set circlemap background images
             cytoCircle.setNodeCircleMapBackgrounds(cyto, cmg);
