--- a/test19.html
+++ b/test19.html
@@ -65,7 +65,7 @@
                 // "ringMergeSwitch" : false
             };
 
-            cmg = new circleMapGenerator(eventAlbum, queryData);
+            cmg = new circleMapGenerator.circleMapGenerator(eventAlbum, queryData);
             query = queryData;
 
             circleDataLoaded = (utils.getQueryStringParameterByName('circles').toLowerCase() === 'true') ? true : false;
