add demo page for cytoscapejs + circlemaps

--- a/index.html
+++ b/index.html
@@ -239,7 +239,13 @@
 				<a href='test19.html?test=true&circles=true' target='_test'>test19.html?test=true&circles=true</a>
 			</dt>
 			<dd>
-				(use cytoscapejs)
+				()
+			</dd>
+			<dt>
+				<a href='cytojs.html' target='_test'>cytojs.html</a>
+			</dt>
+			<dd>
+				cytoscapejs + circlemaps
 			</dd>
 		</dl>
 
