optional parameter to set size of circle map svg

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>index.html</title>
 		<meta charset="utf-8">
 	</head>
-	<body>
+	<body style='background-color:olive;'>
 		<a name='top'></a><small><a href='#bottom'>go to bottom</a></small>
 		<dl>
 			<dt>
