use radio button instead of buttons for toggling circlemaps

--- a/cytojs.html
+++ b/cytojs.html
@@ -21,7 +21,14 @@
 	</head>
 	<body>
 		<div id='formsDiv'>
-			<form id='cytoForm'></form>
+			<form id='cytoForm' name='cytoForm'>
+				<input id='circleMapRadioOff' type="radio" name="turnOnCircleMapRadio" value="off" onClick='cytoCircle.removeCircleMaps(cyto);' checked/>
+				CircleMaps OFF
+				<br />
+				<input id='circleMapRadioOn' type="radio" name="turnOnCircleMapRadio" value="on" onClick='cytoCircle.setNodeCircleMapBackgrounds(cyto, cmg);'/>
+				CircleMaps ON
+				<hr>
+			</form>
 		</div>
 		<hr>
 		<div id='cytoDiv' style='height: 100%; width: 100%; position: absolute; left: 0; top: 80;'></div>
@@ -84,42 +91,6 @@
             // setTimeout(function() {
             // cytoCircle.removeCircleMaps(cyto);
             // }, 3000);
-
-            cytoFormElem = document.getElementById('cytoForm');
-
-            // button to turn on circleMap
-            childElem = document.createElement('input');
-            cytoFormElem.appendChild(childElem);
-            utils.setElemAttributes(childElem, {
-                'id' : 'setCircleMapNodes',
-                'type' : 'button',
-                'value' : 'setCircleMapNodes',
-                'name' : 'setCircleMapNodesButton',
-                'class' : 'test',
-                'title' : 'set CircleMap nodes'
-            });
-            childElem.onclick = function() {
-                console.log('clicked setCircleMapNodesButton');
-                cytoCircle.setNodeCircleMapBackgrounds(cyto, cmg);
-                console.log('circlemaps generated');
-            };
-
-            // button to turn off circleMap
-            childElem = document.createElement('input');
-            cytoFormElem.appendChild(childElem);
-            utils.setElemAttributes(childElem, {
-                'id' : 'turnOffCircleMapNodes',
-                'type' : 'button',
-                'value' : 'turnOffCircleMapNodes',
-                'name' : 'turnOffCircleMapNodesButton',
-                'class' : 'test',
-                'title' : 'turn off CircleMap nodes'
-            });
-            childElem.onclick = function() {
-                console.log('clicked turnOffCircleMapNodes');
-                cytoCircle.removeCircleMaps(cyto);
-                console.log('removed circlemaps');
-            };
 
 		</script>
 	</body>
