--- a/cytojs.html
+++ b/cytojs.html
@@ -5,9 +5,15 @@
 		<meta charset=utf-8 />
 		<title>cytojs.html</title>
 
+		<link rel="stylesheet" href="bower_components/qtip2/jquery.qtip.min.css">
+
 		<script src="bower_components/cytoscape/dist/cytoscape.min.js"></script>
-		<script src="bower_components/jstat/dist/jstat.min.js"></script>
 		<script src="bower_components/d3/d3.min.js"></script>
+		<script src="bower_components/jstat/dist/jstat.min.js"></script>
+		<script src="bower_components/jquery/dist/jquery.min.js"></script>
+		<script src="bower_components/qtip2/jquery.qtip.min.js"></script>
+		<script src="bower_components/cytoscape-qtip/cytoscape-qtip.js"></script>
+
 
 		<script src="scripts/utils.js"></script>
 		<script src="scripts/OD_eventData.js"></script>
