--- a/cytojs.html
+++ b/cytojs.html
@@ -93,6 +93,8 @@
             formElem = document.getElementById('cytoForm');
             formElem.appendChild(cytoCircle.createCircleMapToggleControl());
 
+            cytoCircle.setQtips();
+
 		</script>
 	</body>
 </html>
