refactoring into meteor package - minimal method calls to draw a graph

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 				()
 			</dd>
 			<dt>
-				<a href='cytojs.html' target='_test'>cytojs.html</a>
+				<a href='cytojs.html' target='_test'>cytojs.html</a> and <a href='cytojs02.html' target='_test'>cytojs02.html</a>
 			</dt>
 			<dd>
 				cytoscapejs + circlemaps
