test19 switched over to use medialize's context menu

--- a/test19.html
+++ b/test19.html
@@ -9,9 +9,9 @@
 		<script src="bower_components/jquery/dist/jquery.min.js"></script>
 		<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
 
-		<!-- https://github.com/joewalnes/jquery-simple-context-menu -->
-		<script src="scripts/jquery.contextmenu.js"></script>
-		<link rel="stylesheet" href="css/jquery.contextmenu.css">
+		<!-- https://medialize.github.io/jQuery-contextMenu/ -->
+		<script type="text/javascript" src="bower_components/jQuery-contextMenu/src/jquery.contextMenu.js"></script>
+		<link type="text/css" rel="stylesheet" href="bower_components/jQuery-contextMenu/src/jquery.contextmenu.css">
 
 		<script src="bower_components/d3/d3.min.js"></script>
 		<script src="bower_components/jstat/dist/jstat.min.js"></script>
