no_controls version renders graph only.. no graph editing.

--- a/test19.html
+++ b/test19.html
@@ -21,7 +21,7 @@
 		<script src="scripts/medbook_data_load.js"></script>
 		<script src="scripts/circleMapGenerator.js"></script>
 
-		<script src="scripts/main19.js"></script>
+		<script src="scripts/main19_no_controls.js"></script>
 
 		<noscript>
 			<div align="center">
