--- a/index.html
+++ b/index.html
@@ -239,13 +239,13 @@
 				<a href='test19.html?test=true&circles=true' target='_test'>test19.html?test=true&circles=true</a>
 			</dt>
 			<dd>
-				()
+				modularize javascript and remove editing controls ... slimming down for use with medbook workbench
 			</dd>
 			<dt>
 				<a href='cytojs.html' target='_test'>cytojs.html</a> and <a href='cytojs02.html' target='_test'>cytojs02.html</a> and <a href='cytojs_igf1r.html' target='_test'>cytojs_igf1r.html</a>
 			</dt>
 			<dd>
-				cytoscapejs + circlemaps
+				cytoscapejs + circlemaps. Display circlemaps as background SVG dataURI's on html5 canvas objects. The performance is very poor, resulting in unusable pan and zoom, especially when viewing large number of nodes.
 			</dd>
 		</dl>
 
