--- a/test19.html
+++ b/test19.html
@@ -5,9 +5,9 @@
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="css/main19.css" type="text/css" />
 
-		<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
+		<!-- <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" /> -->
 		<script src="bower_components/jquery/dist/jquery.min.js"></script>
-		<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
+		<!-- <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script> -->
 
 		<!-- https://medialize.github.io/jQuery-contextMenu/ -->
 		<script type="text/javascript" src="bower_components/jQuery-contextMenu/src/jquery.contextMenu.js"></script>
