--- a/test19.html
+++ b/test19.html
@@ -4,14 +4,11 @@
 		<title>test19.html</title>
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="css/main19.css" type="text/css" />
-
-		<!-- <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" /> -->
-		<script src="bower_components/jquery/dist/jquery.min.js"></script>
-		<!-- <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script> -->
-
-		<!-- https://medialize.github.io/jQuery-contextMenu/ -->
-		<script type="text/javascript" src="bower_components/jQuery-contextMenu/src/jquery.contextMenu.js"></script>
 		<link type="text/css" rel="stylesheet" href="bower_components/jQuery-contextMenu/src/jquery.contextmenu.css">
+
+		<!-- <script src="bower_components/jquery/dist/jquery.min.js"></script>
+
+		<script type="text/javascript" src="bower_components/jQuery-contextMenu/src/jquery.contextMenu.js"></script>
 
 		<script src="bower_components/d3/d3.min.js"></script>
 		<script src="bower_components/jstat/dist/jstat.min.js"></script>
@@ -21,7 +18,9 @@
 		<script src="scripts/medbook_data_load.js"></script>
 		<script src="scripts/circleMapGenerator.js"></script>
 
-		<script src="scripts/main19_no_controls.js"></script>
+		<script src="scripts/circleMapGraph.js"></script> -->
+
+		<script src="scripts/circleMapGraph_package.js"></script>
 
 		<noscript>
 			<div align="center">
