work on node context menu

--- a/test19.html
+++ b/test19.html
@@ -5,22 +5,25 @@
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="css/main19.css" type="text/css" />
 		<link type="text/css" rel="stylesheet" href="bower_components/jQuery-contextMenu/src/jquery.contextmenu.css">
+		<link type="text/css" rel="stylesheet" href="bower_components/qtip2/jquery.qtip.min.css">
 
-		<!-- <script src="bower_components/jquery/dist/jquery.min.js"></script>
+		<script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
 
 		<script type="text/javascript" src="bower_components/jQuery-contextMenu/src/jquery.contextMenu.js"></script>
 
-		<script src="bower_components/d3/d3.min.js"></script>
-		<script src="bower_components/jstat/dist/jstat.min.js"></script>
-		<script src="scripts/utils.js"></script>
-		<script src="scripts/OD_eventData.js"></script>
-		<script src="scripts/graphData.js"></script>
-		<script src="scripts/medbook_data_load.js"></script>
-		<script src="scripts/circleMapGenerator.js"></script>
+		<script type="text/javascript" src="bower_components/qtip2/jquery.qtip.min.js"></script>
 
-		<script src="scripts/circleMapGraph.js"></script> -->
+		<script type="text/javascript" src="bower_components/d3/d3.min.js"></script>
+		<script type="text/javascript" src="bower_components/jstat/dist/jstat.min.js"></script>
+		<script type="text/javascript" src="scripts/utils.js"></script>
+		<script type="text/javascript" src="scripts/OD_eventData.js"></script>
+		<script type="text/javascript" src="scripts/graphData.js"></script>
+		<script type="text/javascript" src="scripts/medbook_data_load.js"></script>
+		<script type="text/javascript" src="scripts/circleMapGenerator.js"></script>
 
-		<script src="scripts/circleMapGraph_package.js"></script>
+		<script type="text/javascript" src="scripts/circleMapGraph.js"></script>
+
+		<!-- <script type="text/javascript" src="scripts/circleMapGraph_package.js"></script> -->
 
 		<noscript>
 			<div align="center">
