update package requirements

--- a/test19.html
+++ b/test19.html
@@ -5,13 +5,10 @@
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="css/main19.css" type="text/css" />
 		<link type="text/css" rel="stylesheet" href="bower_components/jQuery-contextMenu/src/jquery.contextmenu.css">
-		<link type="text/css" rel="stylesheet" href="bower_components/qtip2/jquery.qtip.min.css">
 
-		<script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
+		<!-- <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
 
 		<script type="text/javascript" src="bower_components/jQuery-contextMenu/src/jquery.contextMenu.js"></script>
-
-		<script type="text/javascript" src="bower_components/qtip2/jquery.qtip.min.js"></script>
 
 		<script type="text/javascript" src="bower_components/d3/d3.min.js"></script>
 		<script type="text/javascript" src="bower_components/jstat/dist/jstat.min.js"></script>
@@ -21,9 +18,9 @@
 		<script type="text/javascript" src="scripts/medbook_data_load.js"></script>
 		<script type="text/javascript" src="scripts/circleMapGenerator.js"></script>
 
-		<script type="text/javascript" src="scripts/circleMapGraph.js"></script>
+		<script type="text/javascript" src="scripts/circleMapGraph.js"></script> -->
 
-		<!-- <script type="text/javascript" src="scripts/circleMapGraph_package.js"></script> -->
+		<script type="text/javascript" src="scripts/circleMapGraph_package.js"></script>
 
 		<noscript>
 			<div align="center">
