--- a/test19.html
+++ b/test19.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" href="css/main19.css" type="text/css" />
 		<link type="text/css" rel="stylesheet" href="bower_components/jQuery-contextMenu/src/jquery.contextmenu.css">
 
-		<!-- <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
+		<script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
 
 		<script type="text/javascript" src="bower_components/jQuery-contextMenu/src/jquery.contextMenu.js"></script>
 
@@ -18,9 +18,9 @@
 		<script type="text/javascript" src="scripts/medbook_data_load.js"></script>
 		<script type="text/javascript" src="scripts/circleMapGenerator.js"></script>
 
-		<script type="text/javascript" src="scripts/circleMapGraph.js"></script> -->
+		<script type="text/javascript" src="scripts/circleMapGraph.js"></script>
 
-		<script type="text/javascript" src="scripts/circleMapGraph_package.js"></script>
+		<!-- <script type="text/javascript" src="scripts/circleMapGraph_package.js"></script> -->
 
 		<noscript>
 			<div align="center">
