--- a/index.html
+++ b/index.html
@@ -239,7 +239,26 @@
 				<a href='test19.html?test=true&circles=true' target='_test'>test19.html?test=true&circles=true</a>
 			</dt>
 			<dd>
-				modularize javascript and remove editing controls ... slimming down for use with medbook workbench
+				<ul>
+					<li>
+						modularize javascript
+					</li>
+					<li>
+						remove editing controls
+					</li>
+					<li>
+						dashed line for '-a' relations
+					</li>
+					<li>
+						line markers (arrow and bar)
+					</li>
+					<li>
+						restrict node position to viewable area
+					</li>
+					<li>
+						slimming down for use with medbook workbench
+					</li>
+				</ul>
 			</dd>
 			<dt>
 				<a href='cytojs.html' target='_test'>cytojs.html</a> and <a href='cytojs02.html' target='_test'>cytojs02.html</a> and <a href='cytojs_igf1r.html' target='_test'>cytojs_igf1r.html</a>
