dynamically sorted rings

--- a/test19.html
+++ b/test19.html
@@ -59,7 +59,7 @@
                 // "orderFeature" : ['core_subtype', "SUZ12_mRNA"],
                 // "sortingRing" : "expression data"
                 "ringsList" : ["core_subtype", "expression data", 'viper data'],
-                "orderFeature" : ['core_subtype', "SUZ12_mRNA"],
+                "orderFeature" : ["SUZ12_viper"],
                 "sortingRing" : "expression data"
             };
 
