graphData can find neighbors of a node

--- a/test19.html
+++ b/test19.html
@@ -45,7 +45,8 @@
             console.log('eventAlbum', eventAlbum);
 
             // pathway
-            graphDataURL = "data/vlado_suz12.sif";
+            graphDataURL = "data/vlado.sif";
+            // graphDataURL = "data/vlado_rand20.sif";
             graph = new graphData.graphData();
             graph.readSif(utils.getResponse(graphDataURL));
 
