--- a/test19.html
+++ b/test19.html
@@ -6,22 +6,21 @@
 		<link rel="stylesheet" href="css/main19.css" type="text/css" />
 		<link type="text/css" rel="stylesheet" href="bower_components/jQuery-contextMenu/src/jquery.contextmenu.css">
 
-		<script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
+		<!-- <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
 
 		<script type="text/javascript" src="bower_components/jQuery-contextMenu/src/jquery.contextMenu.js"></script>
 
 		<script type="text/javascript" src="bower_components/d3/d3.min.js"></script>
 		<script type="text/javascript" src="bower_components/jstat/dist/jstat.min.js"></script>
 		<script type="text/javascript" src="scripts/utils.js"></script>
-		<script type="text/javascript" src="scripts/OD_eventData.js"></script>
+		<script type="text/javascript" src="scripts/eventData.js"></script>
 		<script type="text/javascript" src="scripts/graphData.js"></script>
 		<script type="text/javascript" src="scripts/medbook_data_load.js"></script>
 		<script type="text/javascript" src="scripts/circleMapGenerator.js"></script>
 
-		<script type="text/javascript" src="scripts/circleMapGraph.js"></script>
+		<script type="text/javascript" src="scripts/circleMapGraph.js"></script> -->
 
-		<!-- <script type="text/javascript" src="scripts/circleMapGraph_package.js"></script> -->
-
+		<script type="text/javascript" src="scripts/circleMapGraph_package.js"></script>
 		<noscript>
 			<div align="center">
 				<p style="color:black;background-color:red;font-size:18pt">
