fix: component links lost their circles after mouseover

--- a/index.html
+++ b/index.html
@@ -258,6 +258,12 @@
 					<li>
 						slimming down for use with medbook workbench
 					</li>
+					<li>
+						new layout engine
+					</li>
+					<li>
+						revert to d3js... abandon cytoscapeJS for circlemap performance reasons
+					</li>
 				</ul>
 			</dd>
 			<dt>
