--- a/test19.html
+++ b/test19.html
@@ -9,17 +9,18 @@
 		<script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
 		<script type="text/javascript" src="bower_components/jQuery-contextMenu/src/jquery.contextMenu.js"></script>
 		<script type="text/javascript" src="bower_components/d3/d3.min.js"></script>
+		<script type="text/javascript" src="bower_components/underscore/underscore.js"></script>
 
-		<!-- <script type="text/javascript" src="bower_components/webcola/WebCola/cola.min.js"></script>
+		<script type="text/javascript" src="bower_components/webcola/WebCola/cola.min.js"></script>
 		<script type="text/javascript" src="bower_components/jstat/dist/jstat.min.js"></script>
 		<script type="text/javascript" src="scripts/utils.js"></script>
 		<script type="text/javascript" src="scripts/eventData.js"></script>
 		<script type="text/javascript" src="scripts/graphData.js"></script>
 		<script type="text/javascript" src="scripts/medbook_data_load.js"></script>
 		<script type="text/javascript" src="scripts/circleMapGenerator.js"></script>
-		<script type="text/javascript" src="scripts/circleMapGraph.js"></script> -->
+		<script type="text/javascript" src="scripts/circleMapGraph.js"></script>
 
-		<script type="text/javascript" src="scripts/circleMapGraph_package_dev.js"></script>
+		<!-- <script type="text/javascript" src="scripts/circleMapGraph_package_dev.js"></script> -->
 
 		<noscript>
 			<div align="center">
