create UI controls for adding data objects

--- a/index.html
+++ b/index.html
@@ -272,6 +272,16 @@
 			<dd>
 				cytoscapejs + circlemaps. Display circlemaps as background SVG dataURI's on html5 canvas objects. The performance is very poor, resulting in unusable pan and zoom, especially when viewing large number of nodes.
 			</dd>
+			<dt>
+				<a href='test20.html?test=true&circles=true' target='_test'>test20.html?test=true&circles=true</a>
+			</dt>
+			<dd>
+				<ul>
+					<li>
+						(user loaded data)
+					</li>
+				</ul>
+			</dd>
 		</dl>
 
 		<a name='bottom'></a><small><a href='#top'>go to top</a></small>
