--- a/test20.html
+++ b/test20.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>test20.html</title>
+		<title>Stuart Lab CircleMap Network Graph Tool</title>
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="css/main19.css" type="text/css" />
 		<link type="text/css" rel="stylesheet" href="bower_components/jQuery-contextMenu/src/jquery.contextmenu.css">
 
-		<script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
+		<!-- <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
 		<script type="text/javascript" src="bower_components/jQuery-contextMenu/src/jquery.contextMenu.js"></script>
 		<script type="text/javascript" src="bower_components/d3/d3.min.js"></script>
 		<script type="text/javascript" src="bower_components/underscore/underscore.js"></script>
@@ -20,9 +20,9 @@
 		<script type="text/javascript" src="scripts/circleMapGenerator.js"></script>
 		<script type="text/javascript" src="scripts/circleMapGraph.js"></script>
 
-		<script type="text/javascript" src="scripts/circleMapGraphControls.js"></script>
+		<script type="text/javascript" src="scripts/circleMapGraphControls.js"></script> -->
 
-		<!-- <script type="text/javascript" src="scripts/circleMapGraph_package_dev.js"></script> -->
+		<script type="text/javascript" src="scripts/circleMapGraph_package_dev.js"></script>
 
 		<noscript>
 			<div align="center">
@@ -47,11 +47,11 @@
 
             // circleDataLoaded = (utils.getQueryStringParameterByName('circles').toLowerCase() === 'true') ? true : false;
             // circleMapGraph.build({
-                // "medbookGraphData" : netData,
-                // "medbookExprData" : exprData,
-                // "medbookViperSignaturesData" : cohortSignaturesData,
-                // "containerDiv" : document.getElementById('graphDiv'),
-                // "circleDataLoaded" : circleDataLoaded
+            // "medbookGraphData" : netData,
+            // "medbookExprData" : exprData,
+            // "medbookViperSignaturesData" : cohortSignaturesData,
+            // "containerDiv" : document.getElementById('graphDiv'),
+            // "circleDataLoaded" : circleDataLoaded
             // });
 		</script>
 	</body>
