--- a/test20.html
+++ b/test20.html
@@ -50,6 +50,7 @@
 		</noscript>
 	</head>
 	<body>
+		<img src="images/baskin-logo-banner.jpg" alt="baskin-logo-banner" height="32">
 		<br>
 		<div id="controlsDiv" style="background-color: lightBlue">
 			controls go in this space
