--- a/test20.html
+++ b/test20.html
@@ -23,7 +23,7 @@
             ga('send', 'pageview');
 		</script>
 
-		<!-- <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
+		<script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
 		<script type="text/javascript" src="bower_components/jQuery-contextMenu/src/jquery.contextMenu.js"></script>
 		<script type="text/javascript" src="bower_components/d3/d3.min.js"></script>
 		<script type="text/javascript" src="bower_components/underscore/underscore.js"></script>
@@ -37,9 +37,11 @@
 		<script type="text/javascript" src="scripts/circleMapGenerator.js"></script>
 		<script type="text/javascript" src="scripts/circleMapGraph.js"></script>
 
-		<script type="text/javascript" src="scripts/circleMapGraphControls.js"></script> -->
+		<script type="text/javascript" src="bower_components/pablo/pablo.js"></script>
 
-		<script type="text/javascript" src="scripts/circleMapGraph_package_dev.js"></script>
+		<script type="text/javascript" src="scripts/circleMapGraphControls.js"></script>
+
+		<!-- <script type="text/javascript" src="scripts/circleMapGraph_package_dev.js"></script> -->
 
 		<noscript>
 			<div align="center">
